--- a/css/style.css
+++ b/css/style.css
@@ -136,10 +136,17 @@ ul {
   width: 100%;
   height: 71px;
   transition: .7s;
+  overflow: hidden;
 }
 
 .userCollapse {
   height: inherit;
+}
+
+.img {
+  width: 253px;
+  height: 150px;
+  z-index: -1;
 }
 
 .profileImg {
@@ -180,13 +187,6 @@ ul {
 
 .hidden {
   display: none;
-}
-
-.img {
-  width: 253px;
-  height: inherit;
-  position: absolute;
-  z-index: -10;
 }
 
 /* Main */
@@ -283,58 +283,52 @@ table.dataTable tbody td {
 
 /* Main Date picker */
 
-.lib_date {
-  width: 610px;
-  flex-wrap: wrap;
-  justify-content: end;
-}
-
-.datepicker {
-  padding: 5px 10px;
-  width: 300px;
+.filter {
+  display: flex;
+  align-items: end;
+  padding: 20px 10px;
 }
 
 .date {
   position: relative;
+  margin-right: 20px;
+}
+
+.datepicker {
+  width: 220px;
+  font-size: 14px;
+  padding: 2px 10px;
+  border: 1px solid #bed2e1;
+  border-radius: 3px;
+  outline: none;
+}
+
+.datepicker::placeholder {
+  font-size: 12px;
 }
 
 .calendar {
   position: absolute;
-  width: 25px;
+  width: 20px;
   right: 5px;
-  top: 50%;
-  transform: translateY(-50%);
+  top: 4px;
 }
 
-.addSearch {
-  position: absolute;
-  width: 25px;
-  right: 5px;
-  top: 40%;
-  transform: translateY(-50%);
+.label {
+  font-size: 13px;
+  color: #000;
 }
 
-.refreshBtn {
-  width: fit-content;
-  display: flex;
-  gap: 20px;
-}
-
-.refreshBtn button {
+.filter button {
   outline: none;
-  padding: 6px 20px;
   border-radius: 2px;
-}
-
-.yordamchi_filter {
-  width: 920px;
-  flex-wrap: wrap;
 }
 
 .btn_search {
   background: rgba(0, 141, 197, 0.8);
-  border: 1px solid rgb(0, 93, 130);
   color: #fff;
+  border: none;
+  padding: 3px 15px;
 }
 
 .btn_search:hover {
@@ -342,17 +336,18 @@ table.dataTable tbody td {
 }
 
 .btn_refresh {
-  background: rgb(239 0 0);
+  background: rgb(232 0 0 / 65%);
   color: #fff;
-  border: 1px solid #a30000;
+  border: none;
+  padding: 3px 15px;
 }
 
 .btn_refresh:hover {
-  background: rgb(219, 0, 0);
+  background: rgb(232 0 0 / 80%);
 }
 
 .btn_refresh>img {
-  width: 20px;
+  width: 18px;
 }
 
 .ref {
@@ -398,88 +393,6 @@ table.dataTable tbody td {
 
 
 
-@media (min-width: 2301px) {
-  .filter {
-    display: flex;
-    justify-content: space-evenly !important;
-  }
-
-  .addSearch {
-    top: 50%;
-  }
-}
-
-@media (max-width: 2300px) {
-  .addSearch {
-    top: 50%;
-  }
-}
-
-@media(min-width: 1901px) {
-  body {
-    height: 100vh;
-  }
-
-  .wrapper {
-    height: inherit;
-  }
-
-  .main {
-    height: inherit;
-  }
-
-  .content {
-    min-width: fit-content;
-    max-width: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-}
-
-@media (max-width: 1900px) {
-  .yordamchi_filter {
-    width: 610px;
-    justify-content: end;
-  }
-
-  .calendar {
-    top: 30%;
-  }
-
-  .refreshBtn {
-    height: 40px;
-  }
-}
-
-@media (max-width: 1600px) {
-  .filter {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 30px;
-  }
-
-  .yordamchi_filter {
-    width: 920px;
-    justify-content: end;
-  }
-
-  .lib_date {
-    width: fit-content;
-  }
-
-  .calendar {
-    top: 50%;
-  }
-
-  .refreshBtn {
-    height: 35px;
-  }
-}
-
-
 @media (max-width: 1400px) {
   .show {
     width: 800px;
@@ -487,24 +400,6 @@ table.dataTable tbody td {
 
   .popUpWindow {
     width: 800px;
-  }
-}
-
-@media (max-width: 1250px) {
-  .lib_date {
-    width: 610px;
-  }
-
-  .yordamchi_filter {
-    width: 610px;
-  }
-
-  .refreshBtn button {
-    padding: 4px 10px;
-  }
-
-  .filter {
-    gap: 10px;
   }
 }
 
@@ -535,21 +430,6 @@ table.dataTable tbody td {
 
   .close {
     right: 262px;
-  }
-
-  .lib_date {
-    width: 305px;
-    justify-content: center;
-  }
-
-  .yordamchi_filter {
-    width: 305px;
-  }
-
-  .refreshBtn {
-    width: 100%;
-    padding: 5px;
-    justify-content: space-between;
   }
 }
 
@@ -634,50 +514,6 @@ table.dataTable tbody td {
 
   .select {
     display: none;
-  }
-
-  .lib_date {
-    width: 610px;
-    justify-content: end;
-  }
-
-  .yordamchi_filter {
-    width: 610px;
-  }
-
-  .refreshBtn button {
-    padding: 4px 10px;
-  }
-
-  .filter {
-    gap: 10px;
-  }
-
-  .refreshBtn {
-    width: fit-content;
-    padding: 0;
-  }
-
-  .filter input,
-  button {
-    font-size: 14px;
-  }
-}
-
-@media(max-width: 690px) {
-  .lib_date {
-    width: 305px;
-    justify-content: center;
-  }
-
-  .yordamchi_filter {
-    width: 305px;
-  }
-
-  .refreshBtn {
-    width: 100%;
-    padding: 5px;
-    justify-content: space-between;
   }
 }
 
