--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
 body {
   font-family: 'Poppins', sans-serif;
   color: #000;
-  font-size: 15px;
+  font-size: 14px;
   background: #ecedee;
 }
 
@@ -144,8 +144,9 @@ ul {
 }
 
 .img {
-  width: 253px;
-  height: 150px;
+  width: 260px;
+  height: 200px;
+  margin-top: 30px;
   z-index: -1;
 }
 
@@ -224,12 +225,12 @@ ul {
 }
 
 .contentWrapper>.title {
-  border-top: 5px solid rgb(0, 183, 255);
+  border-top: 5px solid rgb(44 154 225);
   border-radius: 2px;
 }
 
 .contentWrapper>.title2 {
-  border-top: 5px solid rgb(0, 183, 255);
+  border-top: 5px solid rgb(44 154 225);
   border-radius: 2px 2px 0 0;
 }
 
@@ -325,21 +326,21 @@ table.dataTable tbody td {
 }
 
 .btn_search {
-  background: rgba(0, 141, 197, 0.8);
+  background: rgb(0 142 244);
   color: #fff;
   border: none;
-  padding: 3px 15px;
+  padding: 5px 15px;
 }
 
 .btn_search:hover {
-  background: rgba(0, 141, 197);
+  background: rgb(0, 112, 192);
 }
 
 .btn_refresh {
   background: rgb(232 0 0 / 65%);
   color: #fff;
   border: none;
-  padding: 3px 15px;
+  padding: 3px 10px;
 }
 
 .btn_refresh:hover {
@@ -351,8 +352,8 @@ table.dataTable tbody td {
 }
 
 .ref {
-  transform: rotate(180deg);
-  transition: .5s;
+  transform: rotate(-360deg);
+  transition: 1.5s;
 }
 
 /* Main Footer */
