--- a/css/style.css
+++ b/css/style.css
@@ -384,19 +384,21 @@ table.dataTable tbody td {
 
 .modal_box {
   position: absolute;
-  width: 700px;
-  height: 400px;
+  width: 810px;
+  height: fit-content;
   background: #fff;
+  padding-bottom: 30px;
   left: 50%;
   top: -30%;
   transform: translate(-50%, -150px);
   transition: .5s;
   border-radius: 5px 5px 0 0;
-  border-top: 10px solid rgb(44 154 225);
+  border-top: 30px solid rgb(60 149 208);
 }
 
 .close_btn {
   width: 100%;
+  height: 55px;
 }
 
 .close_btn>img {
@@ -411,6 +413,30 @@ table.dataTable tbody td {
 .close_btn>img:hover {
   transform: scale(1.1);
   transition: .5s;
+}
+
+.select_wrapper {
+  width: 100%;
+  padding: 0 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 25px;
+}
+
+.filter_select {
+  width: 220px;
+  height: 25px;
+  font-size: 13px;
+  border: 1px solid rgb(44 154 225);
+  border-radius: 3px;
+  color: rgba(0, 0, 0, .7);
+}
+
+.selects {
+  display: flex;
+  flex-direction: column;
+  margin-right: 20px;
 }
 
 /* Main Footer */
@@ -603,6 +629,14 @@ table.dataTable tbody td {
   .modal_box {
     width: 96%;
     margin: 0 auto;
+  }
+
+  .select_wrapper {
+    justify-content: center;
+  }
+
+  .selects {
+    margin-right: 0;
   }
 }
 
