--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* Data Table media-query */
+/* Data Table media-query link */
 @import url('./dataTableMedia.css');
 
 * {
@@ -45,6 +45,7 @@ ul {
   width: 100%;
   height: 60px;
   background: rgb(21, 97, 146);
+  box-shadow: 0 5px 10px rgba(21, 97, 146, .3);
   transition: .7s;
 }
 
@@ -137,7 +138,7 @@ ul {
   height: 71px;
   transition: .7s;
   overflow: hidden;
-  background: rgba(0, 0, 0, .3);
+  background: rgba(0, 0, 0, .2);
 }
 
 .userCollapse {
@@ -146,7 +147,7 @@ ul {
 
 .img {
   width: 253px;
-  height: 150px;
+  height: 180px;
   z-index: -1;
 }
 
