--- a/css/style.css
+++ b/css/style.css
@@ -465,12 +465,17 @@ table.dataTable tbody td {
   transition: .3s;
 }
 
-.clearBtn {
+.clearBtn,
+.getSubmit {
   display: flex;
   align-items: center;
 }
 
 .clearBtn>img {
+  width: 18px;
+}
+
+.getSubmit>img {
   width: 18px;
 }
 
