--- a/css/style.css
+++ b/css/style.css
@@ -402,7 +402,11 @@ table.dataTable tbody td {
   background: rgb(0 142 244);
   color: #fff;
   border: none;
-  padding: 5px 15px;
+  padding: 5px 20px;
+}
+
+.btn_search>img {
+  width: 18px;
 }
 
 .btn_search:hover {
@@ -413,7 +417,7 @@ table.dataTable tbody td {
   background: rgb(232 0 0 / 65%);
   color: #fff;
   border: none;
-  padding: 3px 10px;
+  padding: 3px 15px;
 }
 
 .btn_refresh:hover {
@@ -449,7 +453,7 @@ table.dataTable tbody td {
   top: -30%;
   transform: translate(-50%, -150px);
   transition: .5s;
-  border-top: 30px solid rgb(60 149 208);
+  border-top: 25px solid rgb(32 111 162);
 }
 
 .close_btn {
