--- a/css/style.css
+++ b/css/style.css
@@ -259,7 +259,7 @@ a {
 }
 
 .icon_color {
-  color: #fff;
+  color: #fff !important;
 }
 
 .icon_text_color {
@@ -296,7 +296,12 @@ a {
 }
 
 .item_drop {
-  padding: 5px 0;
+  padding: 8px 0;
+  cursor: pointer;
+}
+
+.item_drop:hover.item_drop>.drop_link {
+  color: #fff;
 }
 
 .drop_link {
@@ -312,6 +317,8 @@ a {
   padding-left: 23px;
   text-decoration: none;
 }
+
+
 
 .content {
   min-width: fit-content;
